--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Scheduler</title>
+
+    <link
+      rel="shortcut icon"
+      href="/images/schedule_icon.ico"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <nav class="site-header bg-dark sticky-top py-1">
+      <div
+        class="container d-flex flex-column flex-md-row justify-content-between"
+      >
+        <a class="py-2 navbar-text" href="#">
+          <img
+            src="/images/schedule_icon_light.svg"
+            width="24"
+            height="24"
+            alt=""
+            loading="lazy"
+          />
+        </a>
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Employees</a
+        >
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Positions</a
+        >
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Schedules</a
+        >
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Placeholder</a
+        >
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Placeholder</a
+        >
+        <a class="py-2 d-none d-md-inline-block navbar-text" href="#"
+          >Placeholder</a
+        >
+      </div>
+    </nav>
 
+    <!-- TODO(clintjedwards): Pad this space inbetween -->
+    <div>
+      <h4 class="text-secondary">
+        Define employee descriptors, unavailablity, position eligibility, and other employee specific settings.
+      </h2>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
