Switching back to materialize

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,43 +12,43 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/main.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     <script defer src="/javascript/scheduler_client.js"></script>
     <script defer src="/javascript/main.js"></script>
   </head>
   <body>
-    <div class="uk-width-1-2@s sidenav uk-align-left">
-      <ul class="uk-nav-primary uk-nav-parent-icon sidenav-content" uk-nav>
+    <div id="container">
+      <ul id="slide-out" class="sidenav sidenav-fixed">
+        <h4 class="nav-header">Scheduler</h4>
+        <br />
+        <hr class="nav-header" />
         <br />
         <br />
-        <li class="uk-active"><a href="#">Scheduler</a></li>
-        <br />
-        <hr />
-        <br />
-        <li><a href="#">Employees</a></li>
-        <li><a href="#">Positions</a></li>
-        <li><a href="#">Schedules</a></li>
+        <li><a href="#!">Employees</a></li>
+        <li><a href="#!">Positions</a></li>
+        <li><a href="#!">Schedules</a></li>
       </ul>
-    </div>
-    <div id="content">
-      <dl class="uk-description-list">
-        <dt>TestTestTestTestTest</dt>
-        <dd>TestTestTestTestTest</dd>
-      </dl>
-      <dl class="uk-description-list">
-        <dt>Test</dt>
-        <dd>Test</dd>
-      </dl>
-      <dl class="uk-description-list">
-        <dt>Test</dt>
-        <dd>Test</dd>
-      </dl>
+      <a href="#" data-target="slide-out" class="sidenav-trigger"
+        ><i class="material-icons">menu</i></a
+      >
+
+      <div id="content">
+        <h3>Simple Materialize Responsive Side Menu</h3>
+
+        <p>
+          Resize browser to see what it looks like in (a) brwoser (b) mobile
+          devices
+        </p>
+      </div>
     </div>
     <footer class="footer">
       <div id="footer-text"></div>
