Establishing color palette

--- a/frontend/public/schedules.html
+++ b/frontend/public/schedules.html
@@ -35,7 +35,7 @@
       <ul id="slide-out" class="sidenav sidenav-fixed">
         <h4 class="nav-header">Scheduler</h4>
         <br />
-        <hr class="nav-header" />
+        <hr class="nav-header-hr" />
         <br />
         <br />
         <li><a href="/index.html">Home</a></li>
@@ -47,7 +47,7 @@
         ><i class="material-icons">menu</i></a
       >
 
-      <div id="content">
+      <div class="content" id="content">
         <div class="content-header">
           <h3>Schedules</h3>
         </div>
