--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
       <ul id="slide-out" class="sidenav sidenav-fixed">
         <h4 class="nav-header">Scheduler</h4>
         <br />
-        <hr class="nav-header" />
+        <hr class="nav-header-hr" />
         <br />
         <br />
         <li><a href="/index.html">Home</a></li>
@@ -42,7 +42,7 @@
         ><i class="material-icons">menu</i></a
       >
 
-      <div id="content">
+      <div class="content" id="content">
         <h3>Main page</h3>
 
         <p>
