Modal for schedules and more styling

--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -33,7 +33,10 @@
   <body>
     <div id="container">
       <ul id="slide-out" class="sidenav sidenav-fixed">
-        <h4 class="nav-header">Scheduler</h4>
+        <h4 class="nav-header">
+          Scheduler
+          <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+        </h4>
         <br />
         <hr class="nav-header-hr" />
         <br />
