--- a/frontend/public/schedules.html
+++ b/frontend/public/schedules.html
@@ -24,16 +24,15 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     <script defer src="/javascript/scheduler_client.js"></script>
     <script defer src="/javascript/main.js"></script>
-    <script defer>
-      document.addEventListener("DOMContentLoaded", function () {
-        renderSchedules();
-      });
-    </script>
+    <script defer src="/javascript/schedules.js"></script>
   </head>
   <body>
     <div id="container">
       <ul id="slide-out" class="sidenav sidenav-fixed">
-        <h4 class="nav-header">Scheduler</h4>
+        <h4 class="nav-header">
+          Scheduler
+          <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+        </h4>
         <br />
         <hr class="nav-header-hr" />
         <br />
@@ -52,6 +51,12 @@
           <h3>Schedules</h3>
         </div>
         <div id="schedules-content-body" class="content-body"></div>
+        <div id="view-schedule-modal" class="modal">
+          <div id="view-schedule-modal-content" class="modal-content"></div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect btn-flat">Close</a>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer">
