Refactoring how the timetable datastructure works
Instead of just storing which employees take up which shifts,
it ended up being a bit more straight forward to just have timetable
represent full days of the week, which are then assigned employees.

This allows us to micro assign people over certain contiguous blocks
and represent the schedule in a fashion that is easy to iterate over
and display.

--- a/frontend/public/schedules.html
+++ b/frontend/public/schedules.html
@@ -46,6 +46,7 @@
         ><i class="material-icons">menu</i></a
       >
 
+      <!-- TODO(clintjedwards): the first(most recent) schedule in the list should be large and possibly have extra information, the others should be smaller -->
       <div class="content" id="content">
         <div class="content-header">
           <h3>Schedules</h3>
