--- a/frontend/public/schedules.html
+++ b/frontend/public/schedules.html
@@ -24,6 +24,8 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     <script defer src="/javascript/scheduler_client.js"></script>
     <script defer src="/javascript/main.js"></script>
+    <script defer src="/javascript/sticky.js"></script>
+    <script defer src="/javascript/calendar.js"></script>
     <script defer src="/javascript/schedules.js"></script>
   </head>
   <body>
@@ -47,12 +49,13 @@
       >
 
       <!-- TODO(clintjedwards): the first(most recent) schedule in the list should be large and possibly have extra information, the others should be smaller -->
+      <!-- TODO(clintjedwards): auto hide dates that don't have any allocs and include button to unhide them -->
       <div class="content" id="content">
         <div class="content-header">
           <h3>Schedules</h3>
         </div>
         <div id="schedules-content-body" class="content-body"></div>
-        <div id="view-schedule-modal" class="modal">
+        <div id="view-schedule-modal" class="modal modal-fixed-footer">
           <div id="view-schedule-modal-content" class="modal-content"></div>
           <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect btn-flat">Close</a>
