adding add buttons and cleaning up clickables, hover

--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -34,17 +34,33 @@
     <div id="container">
       <ul id="slide-out" class="sidenav sidenav-fixed">
         <h4 class="nav-header">
-          Scheduler
-          <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          <a class="nav-home-link" href="/index.html">
+            Scheduler
+            <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          </a>
         </h4>
         <br />
         <hr class="nav-header-hr" />
         <br />
         <br />
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/employees.html">Employees</a></li>
-        <li><a href="/positions.html">Positions</a></li>
-        <li><a href="/schedules.html">Schedules</a></li>
+        <li>
+          <a href="/employees.html"
+            >Employees <i class="material-icons">people</i>
+          </a>
+        </li>
+        <li>
+          <a href="/positions.html"
+            >Positions <i class="material-icons">work</i>
+          </a>
+        </li>
+        <li>
+          <a href="/schedules.html"
+            >Schedules <i class="material-icons">schedule</i>
+          </a>
+        </li>
+        <li>
+          <a href="#!">Settings <i class="material-icons">settings</i> </a>
+        </li>
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"
         ><i class="material-icons">menu</i></a
@@ -52,7 +68,12 @@
 
       <div class="content" id="content">
         <div class="content-header">
-          <h3>Employees</h3>
+          <h3>Employees <i class="material-icons">people</i></h3>
+          <div class="right">
+            <a class="waves-effect waves-light btn main-action-button"
+              ><i class="material-icons left">person_add</i>Employee</a
+            >
+          </div>
         </div>
         <div id="employees-content-body" class="content-body"></div>
       </div>
