--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,24 +27,40 @@
     <div id="container">
       <ul id="slide-out" class="sidenav sidenav-fixed">
         <h4 class="nav-header">
-          Scheduler
-          <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          <a class="nav-home-link" href="/index.html">
+            Scheduler
+            <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          </a>
         </h4>
         <br />
         <hr class="nav-header-hr" />
         <br />
         <br />
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/employees.html">Employees</a></li>
-        <li><a href="/positions.html">Positions</a></li>
-        <li><a href="/schedules.html">Schedules</a></li>
+        <li>
+          <a href="/employees.html"
+            >Employees <i class="material-icons">people</i>
+          </a>
+        </li>
+        <li>
+          <a href="/positions.html"
+            >Positions <i class="material-icons">work</i>
+          </a>
+        </li>
+        <li>
+          <a href="/schedules.html"
+            >Schedules <i class="material-icons">schedule</i>
+          </a>
+        </li>
+        <li>
+          <a href="#!">Settings <i class="material-icons">settings</i> </a>
+        </li>
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"
         ><i class="material-icons">menu</i></a
       >
 
       <div class="content" id="content">
-        <h3>Main page</h3>
+        <h3>Main page <i class="material-icons">home</i></h3>
 
         <p>
           some statistics and quick facts about things would be really cool here
