--- a/frontend/public/schedules.html
+++ b/frontend/public/schedules.html
@@ -31,33 +31,50 @@
     <div id="container">
       <ul id="slide-out" class="sidenav sidenav-fixed">
         <h4 class="nav-header">
-          Scheduler
-          <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          <a class="nav-home-link" href="/index.html">
+            Scheduler
+            <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
+          </a>
         </h4>
         <br />
         <hr class="nav-header-hr" />
         <br />
         <br />
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/employees.html">Employees</a></li>
-        <li><a href="/positions.html">Positions</a></li>
-        <li><a href="/schedules.html">Schedules</a></li>
+        <li>
+          <a href="/employees.html"
+            >Employees <i class="material-icons">people</i>
+          </a>
+        </li>
+        <li>
+          <a href="/positions.html"
+            >Positions <i class="material-icons">work</i>
+          </a>
+        </li>
+        <li>
+          <a href="/schedules.html"
+            >Schedules <i class="material-icons">schedule</i>
+          </a>
+        </li>
+        <li>
+          <a href="#!">Settings <i class="material-icons">settings</i> </a>
+        </li>
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"
         ><i class="material-icons">menu</i></a
       >
 
       <!-- TODO(clintjedwards): the first(most recent) schedule in the list should be large and possibly have extra information, the others should be smaller -->
-      <!-- TODO(clintjedwards): auto hide dates that don't have any allocs and include button to unhide them -->
       <div class="content" id="content">
         <div class="content-header">
-          <h3>Schedules</h3>
+          <h3>Schedules <i class="material-icons">schedule</i></h3>
+          <div class="right">
+            <a class="waves-effect waves-light btn main-action-button"
+              ><i class="material-icons left">add</i>Schedule</a
+            >
+          </div>
         </div>
         <div id="schedules-content-body" class="content-body"></div>
-        <div
-          id="view-schedule-modal"
-          class="modal modal-fixed-footer modal-fixed-header"
-        >
+        <div id="view-schedule-modal" class="modal modal-fixed-header">
           <div id="view-schedule-modal-heading" class="modal-header"></div>
           <div id="view-schedule-modal-content" class="modal-content"></div>
         </div>
