--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -22,11 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     <script defer src="/javascript/scheduler_client.js"></script>
     <script defer src="/javascript/main.js"></script>
-    <script defer>
-      document.addEventListener("DOMContentLoaded", function () {
-        renderEmployees();
-      });
-    </script>
+    <script defer src="/javascript/employees.js"></script>
   </head>
   <body>
     <div id="container">
@@ -68,12 +64,17 @@
         <div class="content-header">
           <h3>Employees <i class="material-icons">people</i></h3>
           <div class="right">
-            <a class="waves-effect waves-light btn main-action-button"
+            <a
+              id="add-employee-button"
+              class="waves-effect waves-light btn main-action-button"
               ><i class="material-icons left">person_add</i>Employee</a
             >
           </div>
         </div>
         <div id="employees-content-body" class="content-body"></div>
+        <div id="add-employee-modal" class="modal">
+          <div id="add-employee-modal-content" class="modal-content"></div>
+        </div>
       </div>
     </div>
     <footer class="footer">
