Finished implementation of add and remove unavailabilities

--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -96,13 +96,10 @@
                 <div class="row">
                   <div class="input-field col s12">
                     <p>Unavailability</p>
-                    <!-- <input
-                      disabled
-                      value="I am not editable"
-                      id="disabled"
-                      type="text"
-                    /> -->
-                    <a class="waves-effect waves-light btn primary-button"
+                    <div id="unavailability-list"></div>
+                    <a
+                      id="add-unavailability"
+                      class="waves-effect waves-light btn primary-button"
                       ><i class="material-icons left">alarm_off</i>add new
                       unavailability</a
                     >
