--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
+    <script defer src="/javascript/bundle.js"></script>
     <script defer src="/javascript/scheduler_client.js"></script>
     <script defer src="/javascript/main.js"></script>
   </head>
