--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,74 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Scheduler</title>
 
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
-    <script defer src="/javascript/scheduler_client.js"></script>
-    <script defer src="/javascript/main.js"></script>
-  </head>
-  <body>
-    <div id="container">
-      <ul id="slide-out" class="sidenav sidenav-fixed">
-        <h4 class="nav-header">
-          <a class="nav-home-link" href="/index.html">
-            Scheduler
-            <img class="nav-icon" src="/images/schedule_icon_dark.svg" />
-          </a>
-        </h4>
-        <br />
-        <hr class="nav-header-hr" />
-        <br />
-        <br />
-        <li>
-          <a href="/employees.html"
-            >Employees <i class="material-icons">people</i>
-          </a>
-        </li>
-        <li>
-          <a href="/positions.html"
-            >Positions <i class="material-icons">work</i>
-          </a>
-        </li>
-        <li>
-          <a href="/schedules.html"
-            >Schedules <i class="material-icons">schedule</i>
-          </a>
-        </li>
-        <li>
-          <a href="#!">Settings <i class="material-icons">settings</i> </a>
-        </li>
-      </ul>
-      <a href="#" data-target="slide-out" class="sidenav-trigger"
-        ><i class="material-icons">menu</i></a
-      >
+    <script src="/javascript/bundle.js" defer></script>
+</head>
 
-      <div class="content" id="content">
-        <h3>Main page <i class="material-icons">home</i></h3>
-
-        <p>
-          some statistics and quick facts about things would be really cool here
-        </p>
-      </div>
+<body>
+    <div id="app" v-cloak>
+        <div id="sidebar">
+            <navigation></navigation>
+        </div>
+        <div id="content">
+            <router-view></router-view>
+        </div>
+        <page-footer class="footer"></page-footer>
     </div>
-    <footer class="footer">
-      <div id="footer-text"></div>
-    </footer>
-  </body>
+</body>
+
 </html>
