--- a/frontend/public/employees_add.html
+++ b/frontend/public/employees_add.html
@@ -18,12 +18,12 @@
 
 <body>
     <div id="app">
-        <div id="sidebar" class="m-2">
-            <h1 class="text-3xl mb-8"><a href="/">Scheduler</h1>
-            <ul class="ml-4">
-                <li class="text-xl mb-2"><a href="/employees.html">Employees</a></li>
-                <li class="text-xl mb-2"><a href="/positions.html">Positions</a></li>
-                <li class="text-xl mb-2"><a href="/schedules.html">Schedules</a></li>
+        <div id="sidebar">
+            <h1><a href="/">Scheduler</h1>
+            <ul>
+                <li><a href="/employees.html">Employees</a></li>
+                <li><a href="/positions.html">Positions</a></li>
+                <li><a href="/schedules.html">Schedules</a></li>
             </ul>
         </div>
 
