--- a/frontend/public/employee.html
+++ b/frontend/public/employee.html
@@ -14,7 +14,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" defer></script>
     <script type="module" src="/javascript/main.js" defer></script>
-    <script type="module" src="/javascript/employees.js" defer></script>
+    <script type="module" src="/javascript/employee.js" defer></script>
 </head>
 
 <body>
@@ -28,11 +28,7 @@
             </ul>
         </div>
 
-        <div id="content" class="mt-52 ml-8">
-            <h1 class="text-5xl font-light mb-20">Employees</h1>
-            <ul id="employee_list" class="ml-12">
-            </ul>
-        </div>
+        <div id="content" class="mt-52 ml-8"></div>
         <div id="footer">placeholder</div>
     </div>
 </body>
