--- a/frontend/public/employee.html
+++ b/frontend/public/employee.html
@@ -28,7 +28,20 @@
             </ul>
         </div>
 
-        <div id="content" class="mt-52 ml-8"></div>
+        <div id="content" class="mt-52 ml-8">
+            <div id="employee-info-top" class="mb-20">
+            </div>
+            <div id="employee-info-middle" class="flex flex-wrap">
+                <div id="unavailabilities" class="mr-36">
+                    <h2 class="text-2xl font-light">Unavailabilities</h2>
+                    <ul id="unavailabilities-list" class="ml-7"></ul>
+                </div>
+                <div id="positions">
+                    <h2 class="text-2xl font-light">Positions</h2>
+                    <ul id="positions-list" class="ml-7"></ul>
+                </div>
+            </div>
+        </div>
         <div id="footer">placeholder</div>
     </div>
 </body>
