Add employee add page

--- a/frontend/public/employee.html
+++ b/frontend/public/employee.html
@@ -29,9 +29,9 @@
         </div>
 
         <div id="content" class="mt-52 ml-8">
-            <div id="employee-info-top" class="mb-20">
+            <div id="employee-info-top" class="mb-16">
             </div>
-            <div id="employee-info-middle" class="flex flex-wrap">
+            <div id="employee-info-middle" class="flex flex-wrap mb-16">
                 <div id="unavailabilities" class="mr-36">
                     <h2 class="text-2xl font-light">Unavailabilities</h2>
                     <ul id="unavailabilities-list" class="ml-7"></ul>
@@ -40,6 +40,11 @@
                     <h2 class="text-2xl font-light">Positions</h2>
                     <ul id="positions-list" class="ml-7"></ul>
                 </div>
+            </div>
+            <div id="employee-info-bottom" class="mb-10"></div>
+            <div id="employee-info-actions" class="flex justify-between w-1/2">
+                <button class="bg-green-400 w-1/5 justify-center font-medium border border-transparent">Edit Employee</button>
+                <button class="bg-red-400 w-1/5 justify-center font-medium border border-transparent">Delete Employee</button>
             </div>
         </div>
         <div id="footer">placeholder</div>
