--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -29,9 +29,13 @@
         </div>
 
         <div id="content" class="mt-52 ml-8">
-            <h1 class="text-5xl font-light mb-20">Employees</h1>
+            <h1 class="text-5xl font-light mb-16">Employees</h1>
             <ul id="employee_list" class="ml-12">
             </ul>
+            <a href="/employee_add.html">
+                <button class="mt-20 bg-blue-400 w-1/5 justify-center
+                font-medium border border-transparent">Add New Employee</button>
+            </a>
         </div>
         <div id="footer">placeholder</div>
     </div>
