add grab positions

--- a/frontend/public/employee.html
+++ b/frontend/public/employee.html
@@ -20,15 +20,21 @@
 <body>
     <div id="app">
         <div id="sidebar" class="m-2">
-            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</h1>
+            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</a></h1>
             <ul class="ml-4">
-                <li class="text-xl mb-2 font-light"><a href="/employees.html">Employees</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/positions.html">Positions</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/schedules.html">Schedules</a></li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/employees.html">Employees</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/positions.html">Positions</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/schedules.html">Schedules</a>
+                </li>
             </ul>
         </div>
 
-        <div id="content" class="mt-52 ml-8">
+        <div id="content" class="mt-36 ml-8">
             <div id="employee-info-top" class="mb-16">
             </div>
             <div id="employee-info-middle" class="flex flex-wrap mb-16">
@@ -43,11 +49,15 @@
             </div>
             <div id="employee-info-bottom" class="mb-10"></div>
             <div id="employee-info-actions" class="flex justify-between w-1/2">
-                <button class="bg-green-400 w-1/5 justify-center font-medium border border-transparent">Edit Employee</button>
-                <button class="bg-red-400 w-1/5 justify-center font-medium border border-transparent">Delete Employee</button>
+                <button class="bg-green-400 w-1/5 justify-center font-medium border border-transparent">Edit
+                    Employee
+                </button>
+                <button class="bg-red-400 w-1/5 justify-center font-medium border border-transparent">Delete
+                    Employee
+                </button>
             </div>
+            <div id="footer" class="mt-6 text-gray-400">placeholder</div>
         </div>
-        <div id="footer">placeholder</div>
     </div>
 </body>
 
