--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,18 +19,24 @@
 <body>
     <div id="app">
         <div id="sidebar" class="m-2">
-            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</h1>
+            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</a></h1>
             <ul class="ml-4">
-                <li class="text-xl mb-2 font-light"><a href="/employees.html">Employees</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/positions.html">Positions</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/schedules.html">Schedules</a></li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/employees.html">Employees</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/positions.html">Positions</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/schedules.html">Schedules</a>
+                </li>
             </ul>
         </div>
 
-        <div id="content" class="mt-12 ml-8">
+        <div id="content" class="mt-36 ml-8 flex-grow">
             <h1>Placeholder</h1>
+            <div id="footer" class="mt-6 text-gray-400">placeholder</div>
         </div>
-        <div id="footer">placeholder</div>
     </div>
 </body>
 
