--- a/frontend/public/employees.html
+++ b/frontend/public/employees.html
@@ -20,24 +20,30 @@
 <body>
     <div id="app">
         <div id="sidebar" class="m-2">
-            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</h1>
+            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</a></h1>
             <ul class="ml-4">
-                <li class="text-xl mb-2 font-light"><a href="/employees.html">Employees</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/positions.html">Positions</a></li>
-                <li class="text-xl mb-2 font-light"><a href="/schedules.html">Schedules</a></li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/employees.html">Employees</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/positions.html">Positions</a>
+                </li>
+                <li class="text-xl mb-2 font-light">
+                    <a href="/schedules.html">Schedules</a>
+                </li>
             </ul>
         </div>
 
-        <div id="content" class="mt-52 ml-8">
-            <h1 class="text-5xl font-light mb-16">Employees</h1>
+        <div id="content" class="mt-36 ml-8">
+            <h1 class="text-5xl font-light mb-8">Employees</h1>
             <ul id="employee_list" class="ml-12">
             </ul>
             <a href="/employee_add.html">
                 <button class="mt-20 bg-blue-400 w-1/5 justify-center
                 font-medium border border-transparent">Add New Employee</button>
             </a>
+            <div id="footer" class="mt-6 text-gray-400">placeholder</div>
         </div>
-        <div id="footer">placeholder</div>
     </div>
 </body>
 
