--- a/frontend/public/employee_add.html
+++ b/frontend/public/employee_add.html
@@ -81,19 +81,101 @@
                             <input type="date" id="start_date" class="text-2xl" name="start_date" />
                         </div>
                         <div class="col-span-1 sm:col-span-full xl:col-span-1">
-                            <label for="unavailabilities" class="block text-gray-700">
-                                Unavailabilities
-                            </label>
+                            <h3 class="block text-gray-700 text-xl">Unavailable Times</h3>
+                            <p class="mb-4 text-gray-900">Set the time ranges when this employee is not available</p>
+                            <pre class="text-xs text-muted">
+Field          Allowed values
+-----          --------------
+Minute         0-59
+Hour           0-23
+Day of month   1-31
+Month          1-12
+Day of week    0-7
+Year           1970-2100
+                            </pre>
                             <input type="text" name="unavailabilities-1" autocomplete="off" id="unavailabilities-1"
-                                class="h-2/5 mb-2 text-2xl font-light border
+                                class="mb-2 text-2xl font-light border
                                 border-transparent mt-1 text-center focus:ring-orange-500 focus:border-orange-500
                                 shadow-sm border-gray-500 rounded-md" />
                             <br />
                             <button class="mr-6 border">Add Another</button>
                             <button class="border">Remove Last</button>
                         </div>
-                        <div class="col-span-1 sm:col-span-full xl:col-span-1">
-                            Some long ass description here.
+                        <div class="col-span-1 sm:col-span-full xl:col-span-1 help">
+                            <button id="show-help" type="button" class="collapsible text-gray-900">Show Help</button>
+                            <div id="help-text">
+                                <p class="mb-2">
+                                    To set the time periods in which an employee is not
+                                    available, we write the time period in a special format.
+                                    This format defines the time in which the employee should
+                                    not work for each individual unit of time. We start from
+                                    the smallest unit of time and continue to the largest. You
+                                    can view the units of time in the example table to the
+                                    left.
+                                </p>
+                                <p class="mb-2">
+                                    You are allowed to use commas(representing a list),
+                                    dashes(representing a range), a star(meaning any value),
+                                    or just a single number to convey what times an employee
+                                    is not available.
+                                </p>
+                                <p class="mb-2">
+                                    As an example, let's go through how you would write an
+                                    employee is unavailable from
+                                    <code>12/25/2020 to 12/30/2020</code>.
+                                </p>
+                                <ol class="list-decimal">
+                                    <li>
+                                        The first time period we define is minute. Since for
+                                        this example we don't want the employee to be
+                                        unavailable for entire days, we can put a
+                                        <code>*</code>. This signifies that, for this time
+                                        period, all minutes are unschedulable.
+                                    </li>
+                                    <li>
+                                        The second is the hour time period. It follows that we
+                                        also don't want to specify hours. So we put another
+                                        <code>*</code>.
+                                    </li>
+                                    <li>
+                                        The third is day of month or date. For this we could
+                                        choose to use a list like so:
+                                        <code> 25,26,27,28,29,30</code>. But thats a lot of
+                                        writing. Instead, we use a range: <code>25-30</code>.
+                                    </li>
+                                    <li>
+                                        The third is Day of month. For this we could use a list
+                                        like so: <code> 25,26,27,28,29,30</code>. But thats a
+                                        lot of writing. Instead we use a range:
+                                        <code>25-30</code>.
+                                    </li>
+                                    <li>
+                                        The fourth is Days of the week. For this we don't mind
+                                        which days the 25-30 fall on. So as usual we leave a
+                                        <code>*</code>.
+                                    </li>
+                                    <li>
+                                        Lastly, we need to define the year or else this employee
+                                        gets Christmas off every year. So we just use a single
+                                        value: <code>2020</code>.
+                                    </li>
+                                </ol>
+                                <p class="mb-4">
+                                    Altogether the full expression becomes:
+                                    <code>* * 25-30 12 * 2020</code>
+                                </p>
+                                <pre class="text-muted">
+More Examples:
+
+Unavailable Time                Input
+-----------------               -----
+12/25/2020 to 12/30/2020        * * 25-30 12 * 2020
+Never available                 * * * * * *
+Every year on the first of Jan  * * 1 1 * *
+All of Jun, July, Aug for 2020  * * * 6,7,8 * 2020
+Never schedule for 9am          * 9 * * * *
+                                </pre>
+                            </div>
                         </div>
                         <div class="col-span-full">
                             <label for="positions" class="block text-gray-700">
