--- a/frontend/public/employee_add.html
+++ b/frontend/public/employee_add.html
@@ -93,13 +93,11 @@ Month          1-12
 Day of week    0-7
 Year           1970-2100
                             </pre>
-                            <input type="text" name="unavailabilities-1" autocomplete="off" id="unavailabilities-1"
-                                class="mb-2 text-2xl font-light border
-                                border-transparent mt-1 text-center focus:ring-orange-500 focus:border-orange-500
-                                shadow-sm border-gray-500 rounded-md" />
+                            <div id="unavail_times">
+                            </div>
                             <br />
-                            <button class="mr-6 border">Add Another</button>
-                            <button class="border">Remove Last</button>
+                            <button id="add-button" class="mr-6 border">Add Another</button>
+                            <button id="remove-button" class="border">Remove Last</button>
                         </div>
                         <div class="col-span-1 sm:col-span-full xl:col-span-1 help">
                             <button id="show-help" type="button" class="collapsible text-gray-900">Show Help</button>
